--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +16,29 @@ a {
 #map {
   width: 100%;
   height: 500px;
+}
+
+.traffic {
+  float: left;
+  margin-top: 20px;
+}
+.traffic li {
+  float: left;
+  margin-right: 30px;
+}
+.traffic li a {
+  display: block;
+  width: 200px;
+  height: 40px;
+  background: #555;
+  font: bold 12px/40px "맑은 고딕";
+  color: #fff;
+  text-align: center;
+  border: 1px solid #555;
+}
+.traffic li.on a {
+  background: #fff;
+  color: #333;
 }
 
 /*# sourceMappingURL=style.css.map */
